--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,9 @@
         <activity
             android:name=".EncounterDisplayActivity"
             android:label="@string/title_activity_encounter_display"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".EncounterParametersActivity"
             android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.encounter_generator.MainActivity" />
+
         </activity>
         <activity
             android:name=".MainActivity"
@@ -24,19 +22,25 @@
             android:label="@string/title_activity_encounter_parameters"
             android:parentActivityName=".EncounterParametersActivity"
             android:theme="@style/FullscreenTheme">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.encounter_generator.EncounterParametersActivity" />
-        </activity>
-        <activity
-            android:name=".EncounterParametersActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.encounter_generator.MainActivity" />
+
+        </activity>
+        <activity
+            android:name=".EncounterParametersActivity"
+            android:label="@string/app_name"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.encounter_generator.EncounterParametersActivity" />
+
         </activity>
     </application>
 
